--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 
     <build>
         <plugins>
-            <plugin>
+          <!--  <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -49,7 +49,7 @@
                     <executable>c:/Program Files/Java/jdk1.7.0/bin/javac</executable>
                     <fork>true</fork>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
